# person-sensor

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  memory.x  rust-toolchain.toml
.cargo/: config.toml
examples/: Cargo.toml  README.md  rust-toolchain.toml
examples/.cargo/: config.toml
person-sensor/: Cargo.toml
person-sensor/src/: lib.rs  person_sensor.rs  person_sensor_builder.rs
person-sensor/tests/: mock.rs
person-sensor/tests/common/: mod.rs
src/: lib.rs  main.rs
