[package]
edition = "2021"
name = "person_sensor"
version = "0.1.0"
authors = ["Riley Williams <riley@rileyw.dev>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = [
  "nightly",
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "integrated-timers",
  "executor-interrupt",
] }
embassy-sync = { version = "0.6.0" }
embassy-time = { version = "0.3.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-futures = "0.1.1"

cortex-m = { version = "0.7.7" }
embassy-rp = { version = "0.2.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "intrinsics",
  "rom-v2-intrinsics",
] }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
embassy-usb-logger = "0.2.0"
log = "0.4.21"
bitvec = { version = "1.0.1", default-features = false, features = [] }
embedded-graphics = { version = "0.8.1" }
heapless = "0.8"
micromath = "2.1.0"
buoyant = { git = "https://github.com/riley-williams/buoyant.git", branch = "feature/fixups", default-features = false, features = [
  "embedded-graphics",
] }
display-interface = "0.5.0"

[profile.release]
lto = true
opt-level = "s"
incremental = false
panic = "abort"
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
