[package]
edition = "2021"
name = "person-sensor"
version = "0.3.0"
authors = ["Riley Williams <riley@rileyw.dev>"]
license = "MIT OR Apache-2.0"
resolver = "2"
description = "An embedded-hal driver for the Useful Things Person Sensor"
readme = "../README.md"
repository = "https://github.com/riley-williams/person-sensor"
keywords = ["no_std", "embedded", "async"]

[dependencies]
crc16 = "0.4.0"
embedded-hal-async = "1.0.0"
heapless = "0.8.0"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tokio-test = "0.4.4"
